update index.html and scripts.css to include buttons to start new game and instructions to alert instructions for the game

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 .btn {
     width: 100%;
     margin: 3px;
+    border-radius: 3rem;
 }
 body {
     text-align: center;
@@ -9,4 +10,12 @@ body {
 .panel {
     height: 400px;
     border-width: 2px;
+}
+
+.panel {
+    background-color: whitesmoke;
+}
+
+.jumbotron button {
+    width: 30%;
 }
